@@ -81,6 +81,7 @@
 
   <profiles>
     <profile>
+      <!-- Integration tests -->
       <id>itest</id>
       <properties>
         <hawkular.host>localhost</hawkular.host>
@@ -91,6 +92,7 @@
       </properties>
       <build>
         <plugins>
+
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-failsafe-plugin</artifactId>
@@ -113,7 +115,7 @@
               </execution>
             </executions>
           </plugin>
-<!-- prepared for HAWKULAR-257 Run end to end tests by Travis
+
           <plugin>
             <groupId>org.wildfly.plugins</groupId>
             <artifactId>wildfly-maven-plugin</artifactId>
@@ -129,16 +131,7 @@
                 <id>start-wildfly</id>
                 <phase>pre-integration-test</phase>
                 <configuration>
-                  <javaOpts>
-                    <javaOpt>-server</javaOpt>
-                    <javaOpt>-Xms64m</javaOpt>
-                    <javaOpt>-Xmx512m</javaOpt>
-                    <javaOpt>-XX:MaxPermSize=256m</javaOpt>
-                    <javaOpt>-Djava.net.preferIPv4Stack=true</javaOpt>
-                    <javaOpt>-Djboss.modules.system.pkgs=org.jboss.byteman </javaOpt>
-                    <javaOpt>-Djava.awt.headless=true </javaOpt>
-                    <javaOpt>-Dkeycloak.import=/home/ppalaga/scratch/hawkular-master/wildFly/standalone/configuration/hawkular-realm.json</javaOpt>
-                  </javaOpts>
+                  <server-config>standalone-itest.xml</server-config>
                 </configuration>
                 <goals>
                   <goal>start</goal>
@@ -152,7 +145,8 @@
                 </goals>
               </execution>
             </executions>
-          </plugin> -->
+          </plugin>
+
         </plugins>
       </build>
     </profile>
